# antelope

./: .cproject  .gitignore  .project  AUTHORS  ChangeLog  GNUmakefile  GNUmakefile.iOS  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  makefile
atire/: ant_param_block.c  ant_param_block.cpp  ant_param_block.h  antelope.c  antelope.cpp  atire.c  atire_api.c  atire_api.cpp  atire_api.h  atire_api_remote.c  atire_api_remote.cpp  atire_api_remote.h  atire_api_result.c  atire_api_result.cpp  atire_api_result.h  atire_api_server.c  atire_api_server.cpp  atire_api_server.h  atire_atire.c  atire_client.c  atire_dictionary.c  atire_merge.c  atire_merge.cpp  atire_server.cpp  atire_server.h  index.c  indexer.c  indexer.cpp  indexer.h  indexer_param_block.c  indexer_param_block.cpp  indexer_param_block.h  merger_param_block.cpp
atire/php/: example.php
cgi/: footer.htm  index.htm
historic_note/occam/: asptstring.inc  memindex.inc  parser.inc
java/: antelope.swig
java/AtireDroid/: .classpath  .project  AndroidManifest.xml  build.xml
java/AtireDroid/res/layout/: main.xml
java/AtireDroid/src/org/atire/android/: MobileSearchActivity.java
java/AtireJ/: .classpath  .project  Makefile  atire.sh  build.xml  index.sh  run_atire_remote.sh
java/AtireJ/src/org/atire/: Atire.java  AtireClient.java  AtireRemoteClient.java  Indexer.java
java/android-native/: build.gradle  gradle.properties  settings.gradle
java/android-native/antelope-droid/: build.gradle
java/android-native/antelope-droid/src/main/: AndroidManifest.xml
java/android-native/antelope-droid/src/main/java/au/com/tyo/antelope/: Antelope.java  AntelopeClient.java  AntelopeClientRemote.java  AntelopeDoc.java  AntelopeParser.java  AntelopeSearchResult.java  Utils.java
java/android-native/antelope-droid/src/main/java/au/com/tyo/antelope/jni/: ATIRE_API_remote.java  ATIRE_API_result.java  ATIRE_API_server.java  (+11 more)
java/android-native/antelope-droid/src/main/res/values/: strings.xml
java/android-native/antelope-droid/src/test/java/au/com/tyo/antelope/: ExampleUnitTest.java  MainUnitTest.java
java/android-native/antelope_droid/: build.gradle
java/android-native/antelope_droid/src/androidTest/java/au/com/tyo/antelope/: ExampleInstrumentedTest.java
java/android-native/antelope_droid/src/main/java/au/com/tyo/antelope/: Antelope.java  AntelopeClient.java  AntelopeClientRemote.java  AntelopeClientSocket.java  AntelopeDoc.java  AntelopeSearchResult.java  ByteArrayKMP.java
java/android-native/antelope_droid/src/main/jniLibs/arm64-v8a/: antelope  antelope-dict  index
java/android-native/antelope_droid/src/main/jniLibs/armeabi-v7a/: antelope  antelope-dict  index
java/android-native/antelope_droid/src/main/jniLibs/x86/: antelope  antelope-dict  index
java/android-native/antelope_droid/src/main/jniLibs/x86_64/: antelope  antelope-dict  index
java/android-native/gradle/wrapper/: gradle-wrapper.properties
java/android-native/libantelope/: CMakeLists.txt  build.gradle
java/android-native/libantelope/src/main/: AndroidManifest.xml
java/android-native/libantelope/src/main/java/au/com/tyo/antelope/: Antelope.java  AntelopeClientSocket.java  Indexer.java
java/android-native/libantelope/src/main/res/values/: strings.xml
java/android-native/sample/: build.gradle
java/android-native/sample/libs/: CommonAndroid-release.aar  CommonAppLib-release.aar  CommonUiLib-release.aar  library-release.aar
java/android-native/sample/src/androidTest/java/au/com/tyo/sample/: ExampleInstrumentedTest.java
java/android-native/sample/src/main/: AndroidManifest.xml
java/android-native/sample/src/main/java/au/com/tyo/sample/: App.java  AppUI.java  Controller.java  MainActivity.java  UI.java
java/android-native/sample/src/main/res/layout/: activity_main.xml
java/android-native/sample/src/main/res/raw/: index.aspt
java/android-native/sample/src/main/res/values/: integers.xml  styles.xml
java/android-native/sample/src/test/java/au/com/tyo/sample/: ExampleUnitTest.java
java/jni/: .cproject  .project  Android.mk  Android.mk.r17  Application.mk  CMakeLists.txt  Common.mk  Debug.mk  Makefile  Makefile.am  Makefile.in  README.md  Release.mk  ReleaseArm.mk  antelope.swig  antelope_helper.c  atire  atire.swig  build.xml  build_all.sh  build_arm.sh  debug.sh  debug_build.sh  glob.c  glob.cpp  glob.h  index.c  main.c  release.sh  release_arm.sh  release_build.sh  swig.sh
java/jni/include/: atire.h  collate.h  glob.h  index.h
java/jni/test/: antelope_command.c  antelope_test.c  atire_command.c  atire_test.c  index_test.c
misc/: ant_style.xml  trec.txt
nodejs/: .cproject  .gitignore  .npmignore  .project  Makefile  README.md  antelope.js  antelope.swig  antelope_wrap.cxx  atire-node.js  atire.swig  atire_node.cpp  atire_wrap.cxx  binding-debug.gyp  binding-release.gyp  binding-static.gyp  binding.gyp  build-static.sh  build.sh  configure.sh  debug.sh  env.sh  index.js  indexer.js  myprocessor.js  package-lock.json  package.json  processor.js  server.js  swig.sh
nodejs/include/: atire_api.h  atire_api_remote.h  atire_api_server.h  error.h  indexer.h
samples/: sms.trec
scripts/: build-android.sh  export.sh  set_library_path.mac.sh  setdebug32env.clang
source/: arithmetic_model_bigram.cpp  arithmetic_model_unigram.cpp  assessment_factory.cpp  channel.h  channel_memory.c  channel_memory.cpp  channel_memory.h  directory_iterator.c  directory_iterator.cpp  directory_iterator.h  directory_iterator_file_buffered.c  directory_iterator_file_buffered.cpp  directory_iterator_file_buffered.h  directory_iterator_preindex.cpp  error.c  error.cpp  error.h  index_document.c  instream_bz2.c  instream_bz2.h  memory_index.c  memory_index.cpp  parser.c  parser.cpp  parser.h  parser_readability.c  readability.c  readability.h  readability_factory.c  readability_factory.cpp  readability_factory.h  readability_tag_finder.c  readability_tag_finder.h  readability_tag_weighting.c  readability_tag_weighting.cpp  readability_tag_weighting.h  relevance_feedback_topsig.c  search_engine.c  search_engine.h  search_engine_forum.h  (+24 more)
(+27 files in other folders)
